Content/CSS fix 1. #834 Signup placeholder 2. #832 Facebook/Whatsapp icon shift 3. #829 FB sharing msg 4. #809 Savie product tag shifted in small screen

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -383,6 +383,11 @@ ul.maintabs li a span.special-offer:hover{
         top:5px;
         right:5px;
     }
+
+    ul.maintabs li .special-offer{
+        top:5px;
+        right:5px;
+    }
 }
 
 /**/
