--- a/src/main/webapp/resources/css/savie/styles.css
+++ b/src/main/webapp/resources/css/savie/styles.css
@@ -11123,7 +11123,7 @@ span.dup-error-msg {
 }
 .fwd-savie-wrapper .sign-up-teaser {
   background-color: #fff;
-  top: 0;
+  //top: 0;
   width: 100%;
   position: relative;
   z-index: 10;
@@ -11703,11 +11703,12 @@ span.dup-error-msg {
 .fwd-savie-wrapper .teaser-confirmation .wa_btn .whatsapp-icon {
   font-size: 24px;
   position: absolute;
-  left: 16px;
+  left: 33px;
   top: 6px;
 }
 .fwd-savie-wrapper .teaser-confirmation .fa.fa-facebook.fwd-fb {
-  padding-right: 10px;
+  padding-right: 18px;
+  margin-left: -10px;
 }
 @media (min-width: 992px) {
   .fwd-savie-wrapper .teaser-confirmation .fwd-div-btn {
@@ -13486,6 +13487,12 @@ body.chin .fwd-savie-wrapper .modal.fade .modal-dialog.teaserSurvey .modal-conte
     border: 0;
   }
 }
+
+.fwd-savie-wrapper .teaser-container{
+  padding: 0;
+  position: relative;
+}
+
 .fwd-savie-wrapper .teaser-banner.container-fluid {
   padding: 0;
   position: relative;
